# RetailPulse-End-to-End-Medallion-Data-Engineering-Pipeline-ADF-dbt-Airflow-RAG-

./: .gitignore  RAG_UI_SETUP.md  README.md  main.py  pyproject.toml
airflow/dags/: dag_bronze_ingestion.py
configs/: pipeline.json  pipeline.yaml
dataset/: Json1.json  Json2.json  csv_ds.json  currency_json_ds.json  github_pipeline.json  http_Currency_to_dl.json  http_currency_to_csv_dl.json  http_to_csv_dl.json  json_ds_products.json  lookup_dynamic_github.json  product_from_http_to_dl.json  sql_csv_to_dl.json  sql_ds.json
datasets/: generate_sales.py  sales_2026-05-02.csv
docker/: docker-compose.yml
docker/postgres/: init.sql
factory/: retailpulseadf.json
integrationRuntime/: onprem-retailpulse.json
linkedService/: HttpServer1.json  HttpServer2.json  SqlServer1.json  adls_ls.json  currency_ls.json  currency_lss.json  git_ls.json  ls_adls.json
pipeline/: pl_sql_to_adls_sales.json
rag/: main.py
rag/chains/: qa_chain.py
rag/chroma_db/: chroma.sqlite3
rag/ingestion/: index_builder.py
rag/retriever/: retriever.py
rag/ui/: __init__.py  app.py
retailpulse/: .user.yml  dbt_project.yml  profiles.yml
retailpulseadf/: ARMTemplateForFactory.json  ARMTemplateParametersForFactory.json
retailpulseadf/linkedTemplates/: ArmTemplateParameters_master.json  ArmTemplate_0.json  ArmTemplate_1.json  ArmTemplate_master.json
scripts/: postgres_client.py
validation/bronze/: adls_client.py  bronze_engine.py  config_loader.py  reader.py  validator.py  writer.py
validation/silver/: silver_engine.py  sql_client.py  transformer.py
(+7 files in other folders)
