[project]
name = "retailpulse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "adlfs>=2026.4.0",
    "chromadb>=1.5.9",
    "langchain>=1.2.17",
    "langchain-community>=0.4.1",
    "langchain-chroma>=0.3.0",
    "langchain-ollama>=0.3.0",
    "pandas>=3.0.2",
    "psycopg2-binary>=2.9.12",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "streamlit>=1.28.0",
]
